[package]
name = "blockade"
version = "0.1.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
license = "MIT"
description = "A wrapper library to interface with the Blockade project"

[dependencies]
rand            = "0.4"
reqwest         = "0.8"
serde           = "1.0"
serde_derive    = "1.0"
serde_json      = "1.0"